Remove babel prismjs, change font-size for code and fix layout bug

--- a/src/layout/Layout.less
+++ b/src/layout/Layout.less
@@ -7,7 +7,7 @@
 
     > .topbar {
         position: fixed;
-        z-index: 10;
+        z-index: 10000;
         top: 0;
         left: 0;
         right: 0;
